Fixed some styling issues found from testing layout on mobile.

--- a/src/styles/queries/queries.scss
+++ b/src/styles/queries/queries.scss
@@ -17,7 +17,7 @@
   }
 
   .customer-card-wrapper .customer-card {
-    max-width: 85%;
+    max-width: 80%;
   }
 
   .footer .main-part {
